--- a/src/scss/object/project/_sideMenu.scss
+++ b/src/scss/object/project/_sideMenu.scss
@@ -65,6 +65,7 @@
 			font-family: "Font Awesome 5 Free";
 			font-weight: bold;
 			content: '\f2f5';
+			margin-right: 5px;
 		}
 	}
 	
@@ -73,6 +74,7 @@
 			font-family: "Font Awesome 5 Free";
 			font-weight: bold;
 			content: '\f27a';
+			margin-right: 5px;
 		}
 	}
 	
@@ -81,6 +83,7 @@
 			font-family: "Font Awesome 5 Free";
 			font-weight: bold;
 			content: '\f13e';
+			margin-right: 5px;
 		}
 	}
 	
@@ -98,6 +101,7 @@
 			font-family: "Font Awesome 5 Free";
 			font-weight: bold;
 			content: '\f52b';
+			margin-right: 3px;
 		}
 	}
 }
